cmake_minimum_required (VERSION 3.18.3)
project(llama-nbody_benchmark CXX)

if (NOT TARGET llama::llama)
	find_package(llama REQUIRED)
endif()
find_package(fmt CONFIG REQUIRED)
add_executable(${PROJECT_NAME} nbody.cpp)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
target_link_libraries(${PROJECT_NAME} PRIVATE llama::llama fmt::fmt)

if (MSVC)
	target_compile_options(${PROJECT_NAME} PRIVATE /arch:AVX2 /fp:fast /bigobj)
else()
	target_compile_options(${PROJECT_NAME} PRIVATE -march=native $<IF:$<CXX_COMPILER_ID:NVHPC>,-fast,-ffast-math>)
endif()
