cmake_minimum_required (VERSION 3.15)
project (llama-raycast)

find_package(tinyobjloader CONFIG REQUIRED)
if (NOT TARGET llama::llama)
	find_package(llama CONFIG REQUIRED)
endif()
add_executable(${PROJECT_NAME} raycast.cpp)
target_include_directories(${PROJECT_NAME} PRIVATE ../../thirdparty/stb/include)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
target_link_libraries(${PROJECT_NAME} PRIVATE tinyobjloader::tinyobjloader llama::llama)
